[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookkeeping-agent"
version = "0.1.0"
description = "Continuous transaction categorization and reconciliation targeting very high accuracy."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/bookkeeping-agent"
Issues = "https://github.com/erron-ai/bookkeeping-agent/issues"

[project.scripts]
bookkeeping-agent = "bookkeeping_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
